@@ -7,6 +7,7 @@ import no.nav.common.auth.context.AuthContextHolderThreadLocal;
 import no.nav.common.auth.context.UserRole;
 import no.nav.common.client.aktoroppslag.AktorOppslagClient;
 import no.nav.common.client.norg2.Enhet;
+import no.nav.common.job.leader_election.LeaderElectionClient;
 import no.nav.common.test.auth.AuthTestUtils;
 import no.nav.common.types.identer.AktorId;
 import no.nav.common.types.identer.EnhetId;
@@ -17,20 +18,27 @@ import no.nav.poao_tilgang.client.Decision;
 import no.nav.poao_tilgang.client.PoaoTilgangClient;
 import no.nav.poao_tilgang.client.api.ApiResult;
 import no.nav.veilarbvedtaksstotte.client.aiaBackend.AiaBackendClient;
-import no.nav.veilarbvedtaksstotte.client.aiaBackend.EgenvurderingForPersonDTO;
-import no.nav.veilarbvedtaksstotte.client.aiaBackend.EndringIRegistreringsdataResponse;
+import no.nav.veilarbvedtaksstotte.client.aiaBackend.dto.Besvarelse;
 import no.nav.veilarbvedtaksstotte.client.aiaBackend.dto.EgenvurderingResponseDTO;
+import no.nav.veilarbvedtaksstotte.client.aiaBackend.dto.EndringIRegistreringsdataResponse;
+import no.nav.veilarbvedtaksstotte.client.aiaBackend.request.EgenvurderingForPersonRequest;
 import no.nav.veilarbvedtaksstotte.client.aiaBackend.request.EndringIRegistreringdataRequest;
 import no.nav.veilarbvedtaksstotte.client.arena.VeilarbarenaClient;
 import no.nav.veilarbvedtaksstotte.client.arena.dto.VeilarbArenaOppfolging;
 import no.nav.veilarbvedtaksstotte.client.dokarkiv.DokarkivClient;
-import no.nav.veilarbvedtaksstotte.client.dokarkiv.OpprettetJournalpostDTO;
+import no.nav.veilarbvedtaksstotte.client.dokarkiv.SafClient;
+import no.nav.veilarbvedtaksstotte.client.dokarkiv.dto.Journalpost;
+import no.nav.veilarbvedtaksstotte.client.dokarkiv.dto.JournalpostGraphqlResponse;
+import no.nav.veilarbvedtaksstotte.client.dokarkiv.request.OpprettetJournalpostDTO;
 import no.nav.veilarbvedtaksstotte.client.norg2.EnhetKontaktinformasjon;
 import no.nav.veilarbvedtaksstotte.client.norg2.EnhetStedsadresse;
 import no.nav.veilarbvedtaksstotte.client.pdf.PdfClient;
 import no.nav.veilarbvedtaksstotte.client.person.VeilarbpersonClient;
+import no.nav.veilarbvedtaksstotte.client.person.dto.CvDto;
+import no.nav.veilarbvedtaksstotte.client.person.dto.CvInnhold;
 import no.nav.veilarbvedtaksstotte.client.person.dto.PersonNavn;
 import no.nav.veilarbvedtaksstotte.client.registrering.VeilarbregistreringClient;
+import no.nav.veilarbvedtaksstotte.client.registrering.dto.RegistreringResponseDto;
 import no.nav.veilarbvedtaksstotte.client.regoppslag.RegoppslagClient;
 import no.nav.veilarbvedtaksstotte.client.regoppslag.RegoppslagResponseDTO;
 import no.nav.veilarbvedtaksstotte.client.regoppslag.RegoppslagResponseDTO.Adresse;
@@ -38,8 +46,11 @@ import no.nav.veilarbvedtaksstotte.client.veilederogenhet.VeilarbveilederClient;
 import no.nav.veilarbvedtaksstotte.client.veilederogenhet.dto.Veileder;
 import no.nav.veilarbvedtaksstotte.controller.dto.OppdaterUtkastDTO;
 import no.nav.veilarbvedtaksstotte.domain.Målform;
+import no.nav.veilarbvedtaksstotte.domain.VedtakOpplysningKilder;
+import no.nav.veilarbvedtaksstotte.domain.arkiv.BrevKode;
 import no.nav.veilarbvedtaksstotte.domain.dialog.SystemMeldingType;
-import no.nav.veilarbvedtaksstotte.domain.oyeblikksbilde.Oyeblikksbilde;
+import no.nav.veilarbvedtaksstotte.domain.oyeblikksbilde.EgenvurderingDto;
+import no.nav.veilarbvedtaksstotte.domain.oyeblikksbilde.OyeblikksbildeDto;
 import no.nav.veilarbvedtaksstotte.domain.oyeblikksbilde.OyeblikksbildeType;
 import no.nav.veilarbvedtaksstotte.domain.vedtak.Hovedmal;
 import no.nav.veilarbvedtaksstotte.domain.vedtak.Innsatsgruppe;
@@ -48,21 +59,22 @@ import no.nav.veilarbvedtaksstotte.domain.vedtak.VedtakStatus;
 import no.nav.veilarbvedtaksstotte.repository.*;
 import no.nav.veilarbvedtaksstotte.utils.DatabaseTest;
 import no.nav.veilarbvedtaksstotte.utils.DbTestUtils;
+import no.nav.veilarbvedtaksstotte.utils.JsonUtils;
 import org.joda.time.Instant;
-import org.json.JSONObject;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.web.server.ResponseStatusException;
 
+import java.time.LocalDateTime;
 import java.util.*;
 
 import static no.nav.veilarbvedtaksstotte.client.regoppslag.RegoppslagResponseDTO.AdresseType.NORSKPOSTADRESSE;
 import static no.nav.veilarbvedtaksstotte.utils.TestData.*;
+import static no.nav.veilarbvedtaksstotte.utils.TestUtils.readTestResourceFile;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.containsInAnyOrder;
-import static org.hamcrest.Matchers.equalTo;
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
@@ -77,12 +89,15 @@ public class VedtakServiceTest extends DatabaseTest {
     private static AuthService authService;
 
     private static final DefaultUnleash unleashService = mock(DefaultUnleash.class);
+
+    private static final LeaderElectionClient leaderElectionClient = mock(LeaderElectionClient.class);
     private static final VedtakHendelserService vedtakHendelserService = mock(VedtakHendelserService.class);
     private static final VeilederService veilederService = mock(VeilederService.class);
 
     private static final VeilarbpersonClient veilarbpersonClient = mock(VeilarbpersonClient.class);
     private static final VeilarbregistreringClient registreringClient = mock(VeilarbregistreringClient.class);
     private static final AiaBackendClient AIA_BACKEND_CLIENT = mock(AiaBackendClient.class);
+
     private static final RegoppslagClient regoppslagClient = mock(RegoppslagClient.class);
     private static final AktorOppslagClient aktorOppslagClient = mock(AktorOppslagClient.class);
     private static final VeilarbarenaClient veilarbarenaClient = mock(VeilarbarenaClient.class);
@@ -92,13 +107,15 @@ public class VedtakServiceTest extends DatabaseTest {
     private static final VeilarbveilederClient veilarbveilederClient = mock(VeilarbveilederClient.class);
     private static final UtrullingService utrullingService = mock(UtrullingService.class);
     private static final EnhetInfoService enhetInfoService = mock(EnhetInfoService.class);
+
+    private static final SafClient safClient = mock(SafClient.class);
     private static final MetricsService metricsService = mock(MetricsService.class);
 
     private static final VeilarbPep veilarbPep = mock(VeilarbPep.class);
     private static final Credentials credentials = mock(Credentials.class);
     private static final PoaoTilgangClient poaoTilgangClient = mock(PoaoTilgangClient.class);
 
-    private static final String CV_DATA = "{\"cv\": \"cv\"}";
+    private static final PdfService pdfService = mock(PdfService.class);
     private static final String EGENVURDERING_DATO = new Instant().toString();
 
     @BeforeAll
@@ -115,34 +132,32 @@ public class VedtakServiceTest extends DatabaseTest {
         MalTypeService malTypeService = new MalTypeService(registreringClient);
         DokumentService dokumentService = new DokumentService(
                 regoppslagClient,
-                pdfClient,
                 veilarbarenaClient,
                 veilarbpersonClient,
-                veilarbveilederClient,
                 dokarkivClient,
-                enhetInfoService,
-                malTypeService);
+                malTypeService,
+                oyeblikksbildeService,
+                pdfService);
         vedtakService = new VedtakService(
                 transactor,
                 vedtaksstotteRepository,
                 beslutteroversiktRepository,
                 kilderRepository,
                 meldingRepository,
-                null,
+                safClient,
                 authService,
                 oyeblikksbildeService,
                 veilederService,
                 vedtakHendelserService,
                 dokumentService,
                 veilarbarenaService,
-                metricsService);
+                metricsService, leaderElectionClient);
     }
 
     @BeforeEach
     public void setup() {
         Map<String, String> egenvurderingstekster = new HashMap<>();
         egenvurderingstekster.put("STANDARD_INNSATS", "Svar jeg klarer meg");
-        EgenvurderingResponseDTO egenvurderingResponse = new EgenvurderingResponseDTO(EGENVURDERING_DATO, "123456", "STANDARD_INNSATS", new EgenvurderingResponseDTO.Tekster("testspm", egenvurderingstekster));
         DbTestUtils.cleanupDb(jdbcTemplate);
         reset(veilederService);
         reset(meldingRepository);
@@ -156,12 +171,12 @@ public class VedtakServiceTest extends DatabaseTest {
         when(veilederService.hentVeilederEllerNull(TEST_VEILEDER_IDENT)).thenReturn(Optional.of(new Veileder(TEST_VEILEDER_IDENT, TEST_VEILEDER_NAVN)));
         when(regoppslagClient.hentPostadresse(any())).thenReturn(
                 new RegoppslagResponseDTO("", new Adresse(NORSKPOSTADRESSE, "", "", "", "", "", "", "")));
-        when(veilarbpersonClient.hentCVOgJobbprofil(TEST_FNR.get())).thenReturn(CV_DATA);
         when(veilarbpersonClient.hentMålform(TEST_FNR)).thenReturn(Målform.NB);
+        when(veilarbpersonClient.hentCVOgJobbprofil(TEST_FNR.get())).thenReturn(new CvDto.CVMedInnhold(JsonUtils.fromJson(testCvData(), CvInnhold.class)));
         when(veilarbpersonClient.hentPersonNavn(TEST_FNR.get())).thenReturn(new PersonNavn("Fornavn", null, "Etternavn", null));
-        when(registreringClient.hentRegistreringDataJson(TEST_FNR.get())).thenReturn(getRegistreringsdata());
-        when(AIA_BACKEND_CLIENT.hentEgenvurdering(new EgenvurderingForPersonDTO(TEST_FNR.get()))).thenReturn(egenvurderingResponse);
-        when(AIA_BACKEND_CLIENT.hentEndringIRegistreringdata(new EndringIRegistreringdataRequest(TEST_FNR.get()))).thenReturn(getEndringIRegistreringsdataResponse());
+        when(registreringClient.hentRegistreringData(TEST_FNR.get())).thenReturn(JsonUtils.fromJson(testRegistreringsdata(), RegistreringResponseDto.class));
+        when(AIA_BACKEND_CLIENT.hentEgenvurdering(new EgenvurderingForPersonRequest(TEST_FNR.get()))).thenReturn(JsonUtils.fromJson(testEgenvurderingData(), EgenvurderingResponseDTO.class));
+        when(AIA_BACKEND_CLIENT.hentEndringIRegistreringdata(new EndringIRegistreringdataRequest(TEST_FNR.get()))).thenReturn(getEndringIRegistreringsData());
         when(aktorOppslagClient.hentAktorId(TEST_FNR)).thenReturn(AktorId.of(TEST_AKTOR_ID));
         when(aktorOppslagClient.hentFnr(AktorId.of(TEST_AKTOR_ID))).thenReturn(TEST_FNR);
         when(veilarbarenaClient.hentOppfolgingsbruker(TEST_FNR)).thenReturn(Optional.of(new VeilarbArenaOppfolging(TEST_OPPFOLGINGSENHET_ID, "ARBS", "IKVAL")));
@@ -170,13 +185,17 @@ public class VedtakServiceTest extends DatabaseTest {
                 .thenReturn(new OpprettetJournalpostDTO(
                         TEST_JOURNALPOST_ID,
                         true,
-                        Arrays.asList(new OpprettetJournalpostDTO.DokumentInfoId(TEST_DOKUMENT_ID))));
+                        List.of(new OpprettetJournalpostDTO.DokumentInfoId(TEST_DOKUMENT_ID))));
         when(veilarbveilederClient.hentVeileder(TEST_VEILEDER_IDENT)).thenReturn(new Veileder(TEST_VEILEDER_IDENT, TEST_VEILEDER_NAVN));
         when(enhetInfoService.hentEnhet(EnhetId.of(TEST_OPPFOLGINGSENHET_ID))).thenReturn(new Enhet().setNavn(TEST_OPPFOLGINGSENHET_NAVN));
         when(enhetInfoService.utledEnhetKontaktinformasjon(EnhetId.of(TEST_OPPFOLGINGSENHET_ID)))
                 .thenReturn(new EnhetKontaktinformasjon(EnhetId.of(TEST_OPPFOLGINGSENHET_ID), new EnhetStedsadresse("", "", "", "", "", ""), ""));
-        when(pdfClient.genererPdf(any())).thenReturn(new byte[]{});
+        when(pdfService.produserDokument(any())).thenReturn(new byte[]{});
+        when(pdfService.produserRegisteringPdf(any())).thenReturn(Optional.of(new byte[]{}));
+        when(pdfService.produserCVPdf(any())).thenReturn(Optional.of(new byte[]{}));
+        when(pdfService.produserBehovsvurderingPdf(any())).thenReturn(Optional.of(new byte[]{}));
         when(poaoTilgangClient.evaluatePolicy(any())).thenReturn(new ApiResult<>(null, Decision.Permit.INSTANCE));
+        when(safClient.hentJournalpost(any())).thenReturn(getMockedJournalpostGraphqlResponse());
     }
 
     @Test
@@ -184,7 +203,7 @@ public class VedtakServiceTest extends DatabaseTest {
         when(veilarbarenaClient.hentOppfolgingsbruker(TEST_FNR)).thenReturn(Optional.of(new VeilarbArenaOppfolging(TEST_OPPFOLGINGSENHET_ID, "ISERV", "IVURD")));
         gittUtkastKlarForUtsendelse();
 
-        assertThrows(IllegalStateException.class, () -> fattVedtak());
+        assertThrows(IllegalStateException.class, this::fattVedtak);
     }
 
 
@@ -202,7 +221,7 @@ public class VedtakServiceTest extends DatabaseTest {
                     .setHovedmal(Hovedmal.SKAFFE_ARBEID)
                     .setBegrunnelse("En begrunnelse")
                     .setInnsatsgruppe(Innsatsgruppe.STANDARD_INNSATS)
-                    .setOpplysninger(Arrays.asList("opplysning 1", "opplysning 2"));
+                    .setOpplysninger(Arrays.asList(VedtakOpplysningKilder.REGISTRERING.getDesc(), VedtakOpplysningKilder.EGENVURDERING.getDesc(), VedtakOpplysningKilder.CV.getDesc()));
 
             vedtakService.oppdaterUtkast(utkast.getId(), oppdaterDto);
             assertOppdatertUtkast(oppdaterDto);
@@ -240,7 +259,7 @@ public class VedtakServiceTest extends DatabaseTest {
             vedtakService.lagUtkast(TEST_FNR);
             Vedtak utkast = vedtaksstotteRepository.hentUtkast(TEST_AKTOR_ID);
 
-            List<String> kilder = List.of("test1", "test2");
+            List<String> kilder = List.of(VedtakOpplysningKilder.REGISTRERING.getDesc(), VedtakOpplysningKilder.CV.getDesc());
             kilderRepository.lagKilder(kilder, utkast.getId());
 
             OppdaterUtkastDTO oppdaterUtkastDTO = new OppdaterUtkastDTO();
@@ -264,8 +283,8 @@ public class VedtakServiceTest extends DatabaseTest {
             vedtakService.lagUtkast(TEST_FNR);
             Vedtak utkast = vedtaksstotteRepository.hentUtkast(TEST_AKTOR_ID);
 
-            List<String> gamleKilder = List.of("test1", "test2");
-            List<String> nyeKilder = List.of("test1", "test3");
+            List<String> gamleKilder = List.of(VedtakOpplysningKilder.REGISTRERING.getDesc(), VedtakOpplysningKilder.EGENVURDERING.getDesc());
+            List<String> nyeKilder = List.of(VedtakOpplysningKilder.EGENVURDERING.getDesc(), VedtakOpplysningKilder.CV.getDesc());
             kilderRepository.lagKilder(gamleKilder, utkast.getId());
 
             OppdaterUtkastDTO oppdaterUtkastDTO = new OppdaterUtkastDTO();
@@ -339,7 +358,7 @@ public class VedtakServiceTest extends DatabaseTest {
                 .thenReturn(new OpprettetJournalpostDTO(
                         TEST_JOURNALPOST_ID,
                         false,
-                        Arrays.asList(new OpprettetJournalpostDTO.DokumentInfoId(TEST_DOKUMENT_ID))));
+                        List.of(new OpprettetJournalpostDTO.DokumentInfoId(TEST_DOKUMENT_ID))));
 
         fattVedtak();
 
@@ -360,7 +379,7 @@ public class VedtakServiceTest extends DatabaseTest {
                             .setBegrunnelse("begrunnelse")
                             .setHovedmal(Hovedmal.SKAFFE_ARBEID)
                             .setInnsatsgruppe(Innsatsgruppe.STANDARD_INNSATS)
-                            .setOpplysninger(Collections.singletonList("opplysning")));
+                            .setOpplysninger(Collections.singletonList(VedtakOpplysningKilder.CV.getDesc())));
 
             when(authService.getInnloggetVeilederIdent()).thenReturn(TEST_VEILEDER_IDENT + "annen");
 
@@ -466,9 +485,9 @@ public class VedtakServiceTest extends DatabaseTest {
                     .setHovedmal(Hovedmal.SKAFFE_ARBEID)
                     .setBegrunnelse("En begrunnelse")
                     .setInnsatsgruppe(Innsatsgruppe.STANDARD_INNSATS)
-                    .setOpplysninger(Arrays.asList("opplysning 1", "opplysning 2"));
+                    .setOpplysninger(Arrays.asList(VedtakOpplysningKilder.CV.getDesc(), VedtakOpplysningKilder.EGENVURDERING.getDesc(), VedtakOpplysningKilder.REGISTRERING.getDesc()));
 
-            List<String> kilder = List.of("opp1", "opp2");
+            List<String> kilder = List.of("CV-en/jobbønskene dine på nav.no", "Svarene dine om behov for veiledning", "Svarene dine fra da du registrerte deg");
 
             kilderRepository.lagKilder(kilder, utkast.getId());
 
@@ -525,73 +544,89 @@ public class VedtakServiceTest extends DatabaseTest {
     }
 
     private void assertOyeblikksbildeForFattetVedtak(long vedtakId) {
-        String egenvurderingdata = getEgenvurderingData();
         withContext(() -> {
-            List<Oyeblikksbilde> oyeblikksbilde = oyeblikksbildeService.hentOyeblikksbildeForVedtak(vedtakId);
-            assertThat(oyeblikksbilde, containsInAnyOrder(
-                    equalTo(new Oyeblikksbilde(vedtakId, OyeblikksbildeType.REGISTRERINGSINFO, getOppdatertRegistreringsdata())),
-                    equalTo(new Oyeblikksbilde(vedtakId, OyeblikksbildeType.CV_OG_JOBBPROFIL, CV_DATA)),
-                    equalTo(new Oyeblikksbilde(vedtakId, OyeblikksbildeType.EGENVURDERING, egenvurderingdata)))
-            );
+            List<OyeblikksbildeDto> oyeblikksbilde = oyeblikksbildeService.hentOyeblikksbildeForVedtak(vedtakId);
+            assertTrue(oyeblikksbilde.stream().filter(x -> x.oyeblikksbildeType == OyeblikksbildeType.REGISTRERINGSINFO).map(x -> JsonUtils.fromJson(x.getJson(), RegistreringResponseDto.class)).allMatch(x -> x.equals(JsonUtils.fromJson(getOppdatertRegistreringsdata(), RegistreringResponseDto.class))));
+            assertTrue(oyeblikksbilde.stream().filter(x -> x.oyeblikksbildeType == OyeblikksbildeType.CV_OG_JOBBPROFIL).map(x -> JsonUtils.fromJson(x.getJson(), CvInnhold.class)).allMatch(x -> x.equals(JsonUtils.fromJson(testCvData(), CvInnhold.class))));
+            assertTrue(oyeblikksbilde.stream().filter(x -> x.oyeblikksbildeType == OyeblikksbildeType.EGENVURDERING).map(x -> JsonUtils.fromJson(x.getJson(), EgenvurderingDto.class)).allMatch(x -> x.equals(JsonUtils.fromJson(testOyeblikkbildeEgenvurderingData(), EgenvurderingDto.class))));
         });
     }
 
-    private String getEgenvurderingData() {
-        return "{\"sistOppdatert\":\""+EGENVURDERING_DATO+"\",\"svar\":[{\"spm\":\"testspm\",\"svar\":\"Svar jeg klarer meg\",\"oppfolging\":\"STANDARD_INNSATS\",\"dialogId\":\"123456\"}]}";
+    private String testCvData() {
+        return readTestResourceFile("testdata/oyeblikksbilde-cv.json");
     }
 
-    private String getRegistreringsdata() {
-        return "{\"registrering\":{\"id\":10004240,\"opprettetDato\":\"2023-06-22T16:47:18.325956+02:00\",\"besvarelse\":{\"utdanning\":\"HOYERE_UTDANNING_5_ELLER_MER\",\"utdanningBestatt\":\"JA\",\"utdanningGodkjent\":\"JA\",\"helseHinder\":\"NEI\",\"andreForhold\":\"NEI\"," +
-                "\"sisteStilling\":\"INGEN_SVAR\",\"dinSituasjon\":\"MISTET_JOBBEN\",\"fremtidigSituasjon\":null,\"tilbakeIArbeid\":null},\"teksterForBesvarelse\":[{\"sporsmalId\":\"dinSituasjon\",\"sporsmal\":\"Velg den situasjonen som passer deg best\",\"svar\":\"Har mistet eller kommer til å miste jobben\"},{\"sporsmalId\":\"utdanning\",\"sporsmal\":\"Hva er din høyeste fullførte utdanning?\"," +
-                "\"svar\":\"Høyere utdanning (5 år eller mer)\"},{" +
-                "\"sporsmalId\":\"utdanningGodkjent\",\"sporsmal\":\"Er utdanningen din godkjent i Norge?\",\"svar\":\"Ja\"},{\"sporsmalId\":\"utdanningBestatt\",\"sporsmal\":\"Er utdanningen din bestått?\",\"svar\":\"Ja\"},{\"sporsmalId\":\"andreForhold\",\"sporsmal\":\"Har du andre problemer med å søke eller være i jobb?\",\"svar\":\"Nei\"},{" +
-                "\"sporsmalId\":\"sisteStilling\",\"sporsmal\":\"Hva er din siste jobb?\",\"svar\":\"Annen stilling\"},{" +
-                "\"sporsmalId\":\"helseHinder\",\"sporsmal\":\"Har du helseproblemer som hindrer deg i å søke eller være i jobb?\",\"svar\":\"Nei\"}]," +
-                "\"sisteStilling\": {\"label\":\"Annen stilling\",\"konseptId\": -1,\"styrk08\":\"-1\"}," +
-                "\"profilering\": {\"innsatsgruppe\":\"SITUASJONSBESTEMT_INNSATS\",\"alder\": 28,\"jobbetSammenhengendeSeksAvTolvSisteManeder\": false}," +
-                "\"manueltRegistrertAv\": null},\"type\":\"ORDINAER\"}";
+    private String testEgenvurderingData() {
+        return readTestResourceFile("testdata/egenvurdering-response.json");
+    }
+
+    private String testOyeblikkbildeEgenvurderingData() {
+        return readTestResourceFile("testdata/egenvurdering-data.json");
+    }
+
+    private String testRegistreringsdata() {
+        return readTestResourceFile("testdata/registrering-data.json");
     }
 
     private String getOppdatertRegistreringsdata() {
-        return new JSONObject(
-        "{\"registrering\":{\"id\":10004240,\"opprettetDato\":\"2023-06-22T16:47:18.325956+02:00\",\"besvarelse\":{\"utdanning\":\"HOYERE_UTDANNING_5_ELLER_MER\",\"utdanningBestatt\":\"JA\",\"utdanningGodkjent\":\"JA\",\"helseHinder\":\"NEI\",\"andreForhold\":\"NEI\"," +
-                "\"sisteStilling\":\"INGEN_SVAR\",\"dinSituasjon\":\"OPPSIGELSE\",\"fremtidigSituasjon\":null,\"tilbakeIArbeid\":null},\"teksterForBesvarelse\":[{\"sporsmalId\":\"dinSituasjon\",\"sporsmal\":\"Velg den situasjonen som passer deg best\",\"svar\":\"Jeg har blitt sagt opp av arbeidsgiver\"},{\"sporsmalId\":\"utdanning\",\"sporsmal\":\"Hva er din høyeste fullførte utdanning?\"," +
-                "\"svar\":\"Høyere utdanning (5 år eller mer)\"},{" +
-                "\"sporsmalId\":\"utdanningGodkjent\",\"sporsmal\":\"Er utdanningen din godkjent i Norge?\",\"svar\":\"Ja\"},{\"sporsmalId\":\"utdanningBestatt\",\"sporsmal\":\"Er utdanningen din bestått?\",\"svar\":\"Ja\"},{\"sporsmalId\":\"andreForhold\",\"sporsmal\":\"Har du andre problemer med å søke eller være i jobb?\",\"svar\":\"Nei\"},{" +
-                "\"sporsmalId\":\"sisteStilling\",\"sporsmal\":\"Hva er din siste jobb?\",\"svar\":\"Annen stilling\"},{" +
-                "\"sporsmalId\":\"helseHinder\",\"sporsmal\":\"Har du helseproblemer som hindrer deg i å søke eller være i jobb?\",\"svar\":\"Nei\"}]," +
-                "\"sisteStilling\": {\"label\":\"Annen stilling\",\"konseptId\": -1,\"styrk08\":\"-1\"}," +
-                "\"profilering\": {\"innsatsgruppe\":\"SITUASJONSBESTEMT_INNSATS\",\"alder\": 28,\"jobbetSammenhengendeSeksAvTolvSisteManeder\": false}," +
-                "\"manueltRegistrertAv\": null, \"endretAv\":\"BRUKER\", \"endretTidspunkt\":\"2023-07-18T11:24:03.158629\"},\"type\":\"ORDINAER\"}").toString();
+        return readTestResourceFile("testdata/registrering-oppdatert-data.json");
     }
 
-    private EndringIRegistreringsdataResponse getEndringIRegistreringsdataResponse() {
+    private EndringIRegistreringsdataResponse getEndringIRegistreringsData() {
         return new EndringIRegistreringsdataResponse(
                 10004400,
-                new EndringIRegistreringsdataResponse.Besvarelse(
-                        new EndringIRegistreringsdataResponse.Besvarelse.Utdanning("HOYERE_UTDANNING_1_TIL_4", null, null, null, null),
-                        new EndringIRegistreringsdataResponse.Besvarelse.UtdanningBestatt("JA", null, null, null, null),
-                        new EndringIRegistreringsdataResponse.Besvarelse.UtdanningGodkjent("JA", null, null, null, null),
-                        new EndringIRegistreringsdataResponse.Besvarelse.HelseHinder("JA", null, null, null, null),
-                        new EndringIRegistreringsdataResponse.Besvarelse.AndreForhold("NEI", null, null, null, null),
-                        new EndringIRegistreringsdataResponse.Besvarelse.SisteStilling("INGEN_SVAR", null, null, null, null),
-                        new EndringIRegistreringsdataResponse.Besvarelse.DinSituasjon(
+                new Besvarelse(
+                        new Besvarelse.Utdanning("HOYERE_UTDANNING_1_TIL_4", null, null, null, null),
+                        new Besvarelse.UtdanningBestatt("JA", null, null, null, null),
+                        new Besvarelse.UtdanningGodkjent("JA", null, null, null, null),
+                        new Besvarelse.HelseHinder("JA", null, null, null, null),
+                        new Besvarelse.AndreForhold("NEI", null, null, null, null),
+                        new Besvarelse.SisteStilling("INGEN_SVAR", null, null, null, null),
+                        new Besvarelse.DinSituasjon(
                                 "OPPSIGELSE",
-                                new EndringIRegistreringsdataResponse.Besvarelse.DinSituasjon.TilleggsData(null, "2023-07-31", "2023-07-19", null, null, null, null, null),
+                                new Besvarelse.DinSituasjon.TilleggsData(null, "2023-07-31", "2023-07-19", null, null, null, null, null),
                                 null,
                                 null,
                                 "BRUKER",
                                 "2023-07-18T11:24:03.136693338"
                         ),
-                        new EndringIRegistreringsdataResponse.Besvarelse.FremtidigSituasjon(null, null, null, null, null),
-                        new EndringIRegistreringsdataResponse.Besvarelse.TilbakeIArbeid(null, null, null, null, null)
+                        new Besvarelse.FremtidigSituasjon(null, null, null, null, null),
+                        new Besvarelse.TilbakeIArbeid(null, null, null, null, null)
 
                 ),
                 "BRUKER",
-                "2023-07-18T11:24:03.158629",
-                "2023-07-17T11:27:25.299658",
+                LocalDateTime.parse("2023-07-18T11:24:03.158629"),
+                LocalDateTime.parse("2023-07-17T11:27:25.299658"),
                 "BRUKER",
                 true
         );
+    }
+
+    private JournalpostGraphqlResponse getMockedJournalpostGraphqlResponse() {
+        JournalpostGraphqlResponse journalpostGraphqlResponse = new JournalpostGraphqlResponse();
+        journalpostGraphqlResponse.setData(new JournalpostGraphqlResponse.JournalpostReponseData().setJournalpost(getMockedJournalpost()));
+        return journalpostGraphqlResponse;
+    }
+
+    private Journalpost getMockedJournalpost() {
+        Journalpost journalpost = new Journalpost();
+        journalpost.journalpostId = "journalpost123";
+        journalpost.tittel = "titel";
+
+        Journalpost.JournalpostDokument journalpostDokument1 = new Journalpost.JournalpostDokument();
+        journalpostDokument1.brevkode = BrevKode.EGENVURDERING.name();
+        journalpostDokument1.dokumentInfoId = "111111";
+
+        Journalpost.JournalpostDokument journalpostDokument2 = new Journalpost.JournalpostDokument();
+        journalpostDokument2.brevkode = BrevKode.REGISTRERINGSINFO.name();
+        journalpostDokument2.dokumentInfoId = "222222";
+
+        Journalpost.JournalpostDokument journalpostDokument3 = new Journalpost.JournalpostDokument();
+        journalpostDokument3.brevkode = BrevKode.CV_OG_JOBBPROFIL.name();
+        journalpostDokument3.dokumentInfoId = "333333";
+
+
+        journalpost.dokumenter = new Journalpost.JournalpostDokument[]{journalpostDokument1, journalpostDokument2, journalpostDokument3};
+        return journalpost;
     }
 }
